--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
     <label class="switch">
-        <input type="checkbox">
+        <input type="checkbox" />
         <span class="slider round"></span>
     </label>
     <hr>
